# geoips_tropics

./: .gitignore  CHANGELOG.rst  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: release.yml
.github/workflows/: lint.yaml
docs/archive/: CHANGELOG.md
docs/source/geoips_tropics_api/: index.rst
docs/source/introduction/: index.rst
docs/source/my_package_api/: index.rst
docs/source/releases/: CHANGELOG.md  index.rst  v0_1_0.rst  v1_10_2.rst  v1_10_3.rst  v1_11_0.rst  v1_11_6.rst  v1_12_0.rst  v1_12_1.rst  v1_13_1.rst  v1_13_2.rst  v1_8_1.rst  v1_9_0.rst  v1_9_1.rst
docs/source/releases/1.14.3/: 1.14.1-release-note.yaml  1.14.3-internal-release.yaml
docs/source/releases/1.14.4/: 1.14.4-release-note.yaml
docs/source/releases/1.17.2/: 1.17.2-pytest-based-integration-tests.yaml  47-update-9166ghz-colorbar.yaml
docs/source/userguide/: index.rst  template_instructions.rst
geoips_tropics/: __init__.py  _version.py
geoips_tropics/plugins/: __init__.py
geoips_tropics/plugins/modules/colormappers/: cmap_tropics.py  cmap_tropics91.py
geoips_tropics/plugins/modules/readers/: __init__.py  tropics_L1B_netcdf.py
geoips_tropics/plugins/yaml/products/: tms.yaml
my_package/: __init__.py
my_package/plugins/modules/algorithms/: pmw_89test.py
my_package/plugins/yaml/product_defaults/: 89_PCT_Test.yaml
my_package/plugins/yaml/products/: amsr2_fully_specified.yaml  amsr2_product_defaults.yaml
tests/: test_all.sh
tests/integration_tests/: test_geoips_tropics.py
tests/scripts/: amsr2.global_clean.89-PCT-Product-Defaults.sh  amsr2.tc_clean.89-PCT-Fully-Specified.sh  test_config.sh  test_config.yaml  tropics.sh  tropics_115p95.sh  tropics_117p25.sh  tropics_117p25_edge.sh  tropics_184p41.sh  tropics_204p8.sh  tropics_91p66.sh
