[build-system]
requires = ["setuptools>=61.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"*" = [
    "plugins/*.yaml",
    "plugins/*/*.yaml",
    "plugins/*/*/*.yaml",
    "plugins/*/*/*/*.yaml",
    "plugins/*/*/*/*/*.yaml",
    "plugins/*.txt",
    "plugins/*/*.txt",
    "plugins/*/*/*.txt",
    "plugins/*/*/*/*.txt",
    "plugins/*/*/*/*/*.txt",
]

[tool.setuptools.dynamic]
entry-points = {file = ["entry-points.ini"]}

[tool.setuptools_scm]
"version_scheme" = "post-release"  # Use current version .postN vs incrementing
"local_scheme" = "no-local-version"  # Don't include hash, or date, just postN
"write_to" = "geoips_tropics/_version.py"  # Write an actual file

[project]
name = "geoips_tropics"
authors = []
description = "GeoIPS TROPICS Plugin Package"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.entry-points."geoips.plugin_packages"]
"geoips_tropics" = "geoips_tropics"

[project.entry-points."geoips.readers"]
"tropics_L1B_netcdf" = "geoips_tropics.plugins.modules.readers.tropics_L1B_netcdf"

[project.entry-points."geoips.colormappers"]
"cmap_tropics" = "geoips_tropics.plugins.modules.colormappers.cmap_tropics"
"cmap_tropics91" = "geoips_tropics.plugins.modules.colormappers.cmap_tropics91"
